Hex translation and refactoring

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <div class="break"></div>
     <div class="row">
       <div class="hex_numbers">
-        <p class="hex_label">0</p>
-        <p class="hex_label">0</p>
-        <p class="hex_label">0</p>
-        <p class="hex_label">0</p>
+        <p class="hex_label" id="hl_3">0</p>
+        <p class="hex_label" id="hl_2">0</p>
+        <p class="hex_label" id="hl_1">0</p>
+        <p class="hex_label" id="hl_0">0</p>
 
       </div>
     </div>
@@ -47,5 +47,5 @@
 
     
   </body>
-  <script src="greetings.js"></script>
+  <script src="game_script.js"></script>
 </html>
