changed design, octal added

--- a/index.html
+++ b/index.html
@@ -30,15 +30,32 @@
         <button data-val="0" class="bit_button" type="button">0</button>
         
       </div>
-      <p class="label_1">=</p>
-        <p id="result">0</p>
+      <!-- <p class="label_1">=</p>
+        <p id="result">0</p> -->
+    </div>
+    <div class="row">
+      <div class="hex_numbers">
+        <p class="oct_label" id="result">0</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="hex_numbers">
+        <!-- <p class="oct_label" id="ol_5">0</p>
+        <p class="oct_label" id="ol_4">0</p>
+        <p class="oct_label" id="ol_3">0</p>
+        <p class="oct_label" id="ol_2">0</p>
+        <p class="oct_label" id="ol_1">0</p> -->
+        <p class="oct_label" id="ol_0">0</p>
+
+      </div>
     </div>
     <div class="break"></div>
     <div class="row">
       <div class="hex_numbers">
-        <p class="hex_label" id="hl_3">0</p>
+        <!-- <p class="hex_label" id="hl_3">0</p>
         <p class="hex_label" id="hl_2">0</p>
-        <p class="hex_label" id="hl_1">0</p>
+        <p class="hex_label" id="hl_1">0</p> -->
         <p class="hex_label" id="hl_0">0</p>
 
       </div>
