--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-
+<!-- <div class="bg_image"></div> -->
   <div class="main_panel" id="main">
     <div class="row">
       <button class="menu_button" type="button" id="exercises_button">Exercises</button>
@@ -14,7 +14,7 @@
     <div id="calc_panel">
       <div class="row">
         <div class="hex_numbers">
-          <p class="hint">&nbsp&nbsp2</p>
+          <p class="hint">&nbsp2</p>
           <button data-val="15" class="bit_button" type="button">0</button>
           <button data-val="14" class="bit_button" type="button">0</button>
           <button data-val="13" class="bit_button" type="button">0</button>
@@ -40,7 +40,7 @@
       <div class="row">
         
         <div class="hex_numbers">
-          <p class="hint">&nbsp&nbsp8</p>
+          <p class="hint">&nbsp8</p>
           <!-- <p class="oct_label" id="ol_0">0</p> -->
           <input type="number" class="hex_label" id="ol_0" value=0  name="fme">
         </div>
@@ -63,7 +63,7 @@
       </div>
     </div>
   </div>
-
+  <!-- <a href='https://www.freepik.com/vectors/technology'>Technology vector created by gstudioimagen - www.freepik.com</a> -->
     
   </body>
   <script src="game_script.js"></script>
