--- a/index.html
+++ b/index.html
@@ -15,22 +15,29 @@
       <div class="row">
         <div class="hex_numbers">
           <p class="hint">&nbsp2</p>
-          <button data-val="15" class="bit_button" type="button">0</button>
+          <button data-val="17" class="bit_button hidden" type="button" id="oct_addit_1">0</button>
+          <button data-val="16" class="bit_button hidden" type="button" id="oct_addit_2">0</button>
+          <button data-val="15" class="bit_button" type="button">0</button>  
+          <p class="oct_label_hidden">.</p>
           <button data-val="14" class="bit_button" type="button">0</button>
-          <button data-val="13" class="bit_button" type="button">0</button>
+          <button data-val="13" class="bit_button" type="button">0</button>         
           <button data-val="12" class="bit_button" type="button">0</button>
-          <p class="label_1">.</p>
+          <p class="hex_label_hidden">.</p>
+          <p class="oct_label_hidden">.</p>
           <button data-val="11" class="bit_button" type="button">0</button>
           <button data-val="10" class="bit_button" type="button">0</button>
           <button data-val="9" class="bit_button" type="button">0</button>
+          <p class="oct_label_hidden">.</p>
           <button data-val="8" class="bit_button" type="button">0</button>
-          <p class="label_1">.</p>
+          <p class="hex_label_hidden">.</p>
           <button data-val="7" class="bit_button" type="button">0</button>
           <button data-val="6" class="bit_button" type="button">0</button>
+          <p class="oct_label_hidden">.</p>
           <button data-val="5" class="bit_button" type="button">0</button>
           <button data-val="4" class="bit_button" type="button">0</button>
-          <p class="label_1">.</p>
+          <p class="hex_label_hidden">.</p>
           <button data-val="3" class="bit_button" type="button">0</button>
+          <p class="oct_label_hidden">.</p>
           <button data-val="2" class="bit_button" type="button">0</button>
           <button data-val="1" class="bit_button" type="button">0</button>
           <button data-val="0" class="bit_button" type="button">0</button>
@@ -45,20 +52,21 @@
           <input type="number" class="hex_label" id="ol_0" value=0  name="fme">
         </div>
       </div>
-      <div class="row">
-        
-        <div class="hex_numbers">
-          <p class="hint">10</p>
-          <!-- <p class="oct_label" id="result">0</p> -->
-          <input type="number" class="hex_label" id="result" value=0 step=1 name="fame">
-        </div>
-      </div>
+
       <div class="row">     
         <div class="hex_numbers">
           <p class="hint">16</p>
           <!-- <p class="hex_label" id="hl_0">0</p> -->
           <input type="text" class="hex_label"  id="hl_0" value=0 step=1 name="fname">
 
+        </div>
+      </div>
+      <div class="row">
+        
+        <div class="hex_numbers">
+          <p class="hint">10</p>
+          <!-- <p class="oct_label" id="result">0</p> -->
+          <input type="number" class="hex_label" id="result" value=0 step=1 name="fame">
         </div>
       </div>
     </div>
