--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <body>
 <!-- <div class="bg_image"></div> -->
   <div class="main_panel" id="main">
-    <div class="row">
-      <button class="menu_button" type="button" id="exercises_button">Exercises</button>
-    </div>
-
     <div id="calc_panel">
+      <div class="row">
+        <button class="menu_button" type="button" id="binary_tasks_start">binary</button> 
+        <button class="menu_button" type="button" id="exercises_button">x86</button>
+      </div>
       <div class="row">
         <div class="hex_numbers">
           <p class="hint">&nbsp2</p>
